# mdviewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: block-vendored-edits.sh  cargo-fmt.sh
.claude/skills/cut-release/: SKILL.md
.claude/skills/spec-and-plan/: SKILL.md
.github/workflows/: ci.yml  promote-beta.yml  release.yml
docs/superpowers/plans/: 2026-05-20-file-associations.md  2026-05-20-mermaid-rendering.md  2026-05-21-remember-last-directory.md  2026-05-22-in-document-search.md  2026-05-23-auto-update.md  2026-05-23-export-html.md  2026-05-23-export-pdf.md  2026-05-23-interactive-task-lists.md  2026-05-24-install-cli-command.md  2026-05-24-restore-tabs.md  2026-05-25-theme-toggle.md  2026-05-25-whats-new-modal.md  2026-05-26-windows-x86-64-port.md  2026-05-31-folder-content-search.md  2026-06-01-beta-update-channel.md  2026-06-02-in-app-editing.md  2026-06-02-user-friendly-release-notes.md  2026-06-09-review-mode.md  2026-06-10-claude-code-hook-install.md  2026-06-10-reference-navigation.md  2026-06-10-reveal-active-file-in-tree.md  2026-06-10-review-mode-ux.md  2026-06-11-mcp-server.md  2026-06-13-claude-integration-panel.md  2026-06-17-configurable-table-rendering.md  2026-06-17-customizable-pdf-export.md  2026-06-30-launch-smoke-test.md
docs/superpowers/specs/: 2026-05-20-file-associations-design.md  2026-05-20-mermaid-rendering-design.md  2026-05-21-remember-last-directory-design.md  2026-05-22-in-document-search-design.md  2026-05-23-auto-update-design.md  2026-05-23-export-document-design.md  2026-05-24-install-cli-command-design.md  2026-05-24-restore-tabs-design.md  2026-05-25-image-viewer-design.md  2026-05-25-theme-toggle-design.md  2026-05-25-whats-new-modal-design.md  2026-05-26-windows-x86-64-port-design.md  2026-05-31-folder-content-search-design.md  2026-06-01-beta-update-channel-design.md  2026-06-02-in-app-editing-design.md  2026-06-02-user-friendly-release-notes-design.md  2026-06-09-review-mode-design.md  2026-06-10-claude-code-hook-install-design.md  2026-06-10-reference-navigation-design.md  2026-06-10-reveal-active-file-in-tree-design.md  2026-06-10-review-mode-ux-design.md  2026-06-11-mcp-server-design.md  2026-06-13-claude-integration-panel-design.md  2026-06-17-configurable-table-rendering-design.md  2026-06-17-customizable-pdf-export-design.md  2026-06-29-code-file-rendering-design.md  2026-06-29-inline-code-editing-design.md  2026-06-29-integration-explainers-design.md  2026-06-30-launch-smoke-test-design.md
examples/: README.md
examples/code/: Makefile  data.json  example.c  example.css  example.go  example.html  example.js  example.py  example.rs  example.sh  example.sql  example.ts  example.yaml  notes.conf
examples/markdown/: gfm.md  kitchen-sink.md  math.md  mermaid.md
scripts/: changelog-section.mjs  smoke-test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_hook.rs  code.rs  commands.rs  export.rs  fs_ops.rs  git.rs  lib.rs  main.rs  markdown.rs  mcp.rs  mcp_server.rs  menu.rs  open_files.rs  pdf_postprocess.rs  recent.rs  search.rs  tasklist.rs  tree.rs  updates.rs  watcher.rs
src-tauri/tests/: launch_smoke.rs  mcp_proxy.rs
src-tauri/tests/fixtures/: smoke.md
ui/: app.js  claude-integration.html  claude-integration.js  editor-modes.js  editor-modes.test.js  editor.js  editor.test.js  export.js  export.test.js  filetype.js  filetype.test.js  folder_search.js  folder_search.test.js  github-markdown.css  index.html  integration.js  integration.test.js  mcp.js  mcp.test.js  package.json  pdf-export.css  pdf-export.html  pdf-export.js  pdf-presets.js  pdf-presets.test.js  preferences.html  preferences.js  review.js  review.test.js  search.js  search.test.js  styles.css  theme.js  theme.test.js  treeops.js  treeops.test.js  update.js  update.test.js
