[package]
name = "mdviewer"
version = "1.11.0"
description = "A markdown viewer with a file tree and beautifully rendered preview"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[[bin]]
name = "mdviewer"
path = "src/main.rs"

[lib]
name = "mdviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown rendering with syntax highlighting
comrak = { version = "0.52", features = ["syntect"] }
syntect = "5.3"

# File-system watching
notify = "8.2"
notify-debouncer-full = "0.7"

# Decode PNG export payloads from the frontend (canvas → base64 → bytes)
base64 = "0.22"

# macOS-only: native WKWebView print-to-PDF (paginated, silent save).
# objc2 0.6 core with the 0.3 framework wrappers Tauri 2.11 uses internally.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = [
    "NSPrintInfo",
    "NSPrintOperation",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "objc2-app-kit"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
